<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Overview category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/item_name" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_item_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_item_name"
                        android:inputType="text" />

                    <!-- Model field -->
                    <EditText
                        android:id="@+id/edit_item_descr"
                        style="@style/EditorFieldStyle"
                        android:hint="Description"
                        android:inputType="textCapWords" />


                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:paddingLeft="4dp">

                        <!-- Price field -->
                        <EditText
                            android:id="@+id/edit_item_price"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/price_hint_editor_activity"
                            android:inputType="numberDecimal" />

                        <!-- Units for amount -->
                        <TextView
                            android:id="@+id/currency_symbol"
                            style="@style/EditorUnitsStyle"
                            android:text="@string/currency_symbol" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>


            <!-- Image section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/item_photo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Photo -->
                    <ImageView
                        android:id="@+id/edit_item_photo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:maxHeight="125dp"
                        android:paddingLeft="4dp"
                        android:scaleType="centerInside"
                        tools:background="@drawable/empty_storage_box"
                        tools:minHeight="120dp" />

                    <TextView
                        android:id="@+id/add_or_edit_photo_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="italic"
                        tools:text="Tap to add a photo" />

                </LinearLayout>


            </LinearLayout>

            <!-- status category -->
            <LinearLayout
                android:id="@+id/container_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/item_rating" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Status drop-down spinner -->
                    <Spinner
                        android:id="@+id/spinner_status"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

            <!-- Supplier Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label Supplier -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/supplier" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_item_supplier_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_supplier_name"
                        android:inputType="textCapWords" />

                    <!-- E-mail field -->
                    <EditText
                        android:id="@+id/edit_item_supplier_email"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_email_supplier"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
            </LinearLayout>

            <!-- Measurement category -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/container_measurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_measurement" />

                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingLeft="4dp">

                        <!-- Quantity field -->
                        <EditText
                            android:id="@+id/edit_item_quantity"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_item_quantity"
                            android:inputType="number" />

                        <!-- Units for amount -->
                        <TextView
                            android:id="@+id/label_amount_units"
                            style="@style/EditorUnitsStyle"
                            android:text="@string/unit_item_quantity" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/rejectItemButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="Reject item"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/addItemButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/addButtonColor"
                        android:text="Add item"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
